[workspace]
members = [ "client","server"]
resolver = "2"

[package]
name = "summonsters"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "server"

[[bin]]
name = "client"
path = "client"

[workspace.dependencies]
tungstenite = "0.24.0"
tower = "0.5.1"
tower-http = "0.6.1"
tower-service = "0.3.3"
axum-extra = "0.9.4"
tokio = "1.40.0"
tokio-tungstenite = "0.24.0"
axum = "0.7.7"
pretty_env_logger = "0.5.0"
prost = "0.13"
futures = "0.3.31"
futures-channel = "0.3.31"
futures-util = "0.3.31"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
dashmap = "6.1.0"