[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }
axum-extra = { workspace = true, features = ["typed-header"] }
tower-service = { workspace = true }
tower = { workspace = true, features = ["full"] }
axum = { workspace = true, features = ["ws", "macros"] }
pretty_env_logger = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
dashmap = { workspace = true }